deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: developer-demo-deployment
  labels:
    mylabel: myvalue
    app: developer-demo

spec:
  replicas: 2
  selector:
    matchLabels:
      app: developer-demo
  template:
    metadata:
      labels:
        app: developer-demo
    spec:
      containers:
        - name: developer-demo-app
          image: k8s-demo-image
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
